--- a/src/theme/variables.css
+++ b/src/theme/variables.css
@@ -1,19 +1,34 @@
+:root {
+  --color-primary-dark: #433878; /* Color más oscuro */
+  --color-primary: #7E60BF; /* Segundo color más oscuro */
+  --color-accent: #E4B1F0; /* Color más claro */
+  --color-light: #FFE1FF; /* Color más claro y suave */
+}
+
 /* =================== GRID =================== */
 /* Grid para mantener las tarjetas en dos columnas */
 .casting-grid {
   display: grid;
-  grid-template-columns: 1fr 1fr; /* Dos columnas iguales */
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr)); /* Ajuste columnas */
+  grid-gap: 16px;
+  padding: 16px;
+  overflow-x: auto; /* Permite el scroll */
+}
+
+.model-grid {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(250px, 1fr)); /* Ajuste columnas*/
   grid-gap: 16px;
   padding: 16px;
 }
 
 /* =================== TARJETAS =================== */
 .custom-card {
+  background-color: var(--color-light); /* Cambiar el fondo de las tarjetas */
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
   border-radius: 12px;
-  transition: transform 0.3s ease; 
-  overflow: hidden; 
-  background-color: #dddddd;
+  transition: transform 0.3s ease;
+  overflow: hidden;
 }
 
 .custom-card:hover {
@@ -22,8 +37,8 @@
 
 
 .card-image {
-  width: 100%; 
-  height: 300px;
+  width: 480px; 
+  height: 600px;
   object-fit: cover; 
   border-radius: 8px 8px 0 0; 
   display: block;
@@ -34,7 +49,7 @@
 ion-card-title {
   font-size: 1.1rem;
   font-weight: bold;
-  color: #333;
+  color: var(--color-primary-dark); /* Título de las tarjetas con color oscuro */
 }
 
 /* Contenido de la tarjeta */
@@ -50,7 +65,7 @@ ion-card-content p strong {
 
 /* =================== BOTONES =================== */
 .semi-transparent-btn {
-  --background: linear-gradient(135deg, rgba(255, 94, 98, 0.8), rgba(255, 42, 43, 0.8));
+  --background: linear-gradient(135deg, var(--color-primary-dark), var(--color-primary));
   --color: white;
   --border-radius: 50px;
   --border-color: rgba(255, 255, 255, 0.3);
@@ -69,7 +84,7 @@ ion-card-content p strong {
 
 
 .semi-transparent-btn:hover {
-  --background: linear-gradient(135deg, rgba(255, 42, 43, 0.9), rgba(255, 0, 5, 0.9));
+  --background: linear-gradient(135deg, var(--color-primary-dark), var(--color-primary));
   transform: translateY(-5px);
   box-shadow: 0 12px 25px rgba(0, 0, 0, 0.2);
 }
@@ -91,8 +106,8 @@ ion-card-content p strong {
 
 /* Estilo de los chips */
 ion-chip {
-  --background: var(--ion-color-light);
-  --color: var(--ion-color-primary);
+  --background: var(--color-accent);
+  --color: var(--color-primary-dark);
   --border-radius: 16px;
   --padding-start: 12px;
   --padding-end: 12px;
@@ -105,8 +120,8 @@ ion-chip {
 
 
 ion-chip:hover {
-  background-color: var(--ion-color-primary);
-  color: var(--ion-color-primary-contrast);
+  background-color: var(--color-primary);
+  color: var(--color-light);
 }
 
 
@@ -162,7 +177,7 @@ ion-chip[selected] {
   font-size: 1.8rem;
   font-weight: bold;
   margin-bottom: 20px;
-  color: #ffffff;
+  color: var(--color-primary-dark);
 }
 
 .review-card {
@@ -195,4 +210,21 @@ ion-card-title {
 ion-card-subtitle {
   font-size: 0.9rem;
   color: #6b6b6b;
+}
+
+/* =================== TOOLBAR =================== */
+
+.center-title {
+  text-align: center; /* Centrar horizontalmente */
+  width: 100%; /* Asegurar que ocupe el 100% del ancho del toolbar */
+  font-weight: bold; /* Opcional: hacer el título más destacado */
+  position: absolute; /* Para que el texto esté centrado independientemente de otros elementos */
+  left: 50%;
+  transform: translateX(-50%); /* Centrado exacto */
+}
+
+.page-title {
+  font-size: 1.2rem; /* Tamaño del título de la página */
+  font-weight: normal; /* Estilo opcional */
+  margin-left: 10px; /* Para separar el título del borde izquierdo */
 }
